[tool.poetry]
name = "moebius-strip-plot"
version = "0.1.0"
description = "Plot of the Moebius Strip"
authors = ["Funk3yMonk3y <M1ghtyMonk3y@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "3.8.2"
numpy = "1.26.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
